# CyPulse

./: .ai_profile  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.asp/: Makefile.inc
.asp/hooks/: clean-allow-list.sh
.asp/profiles/: autonomous_dev.md  autopilot.md  design_dev.md  frontend_quality.md  global_core.md  multi_agent.md  system_dev.md  task_orchestrator.md
.asp/scripts/: install.sh  update-project-description.py
.asp/templates/: DEPLOY_SPEC_Template.md  ROADMAP_Template.yaml  SDS_Template.md  SPEC_Template.md  SRS_Template.md  UIUX_SPEC_Template.md  example-profile-content.yaml  example-profile-full.yaml  example-profile-system.yaml
.claude/: settings.json
.github/workflows/: ci.yml
config/: config.yaml.example  targets.yaml.example
cypulse/: __init__.py  __main__.py  cli.py
cypulse/analysis/: __init__.py  base.py  cloud_exposure.py  darkweb.py  dns_security.py  email_security.py  fake_domain.py  ip_reputation.py  network.py  runner.py  web_security.py
cypulse/automation/: __init__.py  diff.py  notifier.py  scheduler.py
cypulse/discovery/: __init__.py  amass.py  base.py  dnsx.py  httpx_tool.py  naabu.py  pipeline.py  subfinder.py  web_sources.py
cypulse/models/: __init__.py  assets.py  findings.py  score.py
cypulse/remediation/: playbooks.py
cypulse/report/: __init__.py  generator.py
cypulse/scoring/: __init__.py  engine.py  weights.py
cypulse/utils/: __init__.py  diagnostics.py  http.py  io.py  logging.py  sanitize.py  scan_lifecycle.py  subprocess.py
docs/: DEPLOY_SPEC.md  SDS.md  SRS.md  TROUBLESHOOTING.md  architecture.md
docs/adr/: ADR-001-initial-technology-stack.md  ADR-002-scoring-algorithm.md  ADR-003-api-fallback-free-sources.md  ADR-004-scoring-dedup-and-remediation.md  ADR-005-cloud-exposure-module.md  ADR-006-source-resilience-and-confidence.md  ADR-007-scan-lifecycle-and-progress.md  ADR-008-observability-and-secret-masking.md
docs/plans/: 2026-03-13-fix-m1-scoring-and-httpx-headers.md
tests/: conftest.py  test_cli.py  test_meta.py
tests/sit/: test_cli_lifecycle.py  test_full_scan_flow.py  test_scan_diff_resilience.py
(+38 files in other folders)
